# neodcs

./: .gitignore  CMakeLists.txt  README.md  types.h
axas_mca/: CMakeLists.txt  main.cpp
cmake/modules/: FindEIB7.cmake  FindLibNIDAQmx.cmake
common/: compressor.h  daq.cpp  daq.h  math.h  pid.cpp  pid.h  utils.cpp  utils.h
composer/: CMakeLists.txt  main.cpp
composer_lis/: CMakeLists.txt  main.cpp
composer_par/: CMakeLists.txt  main.cpp
eib7/: CMakeLists.txt  main.cpp
esp301/: CMakeLists.txt  main.cpp
nidaq/: CMakeLists.txt  main.cpp
nidaq_ai/: CMakeLists.txt  main.cpp
nidaq_ci/: main.cpp
nidaq_ci_dummy/: CMakeLists.txt  main.cpp
onl_analyzer/: CMakeLists.txt  main.cpp
plugins/: package.json  vite.config.ts
plugins.old/: package.json  tsconfig.json
plugins.old/lib/: utils.ts
plugins.old/src/: common.tsx  dcs_histo.tsx  hv_control.tsx  position_control.tsx
plugins.old/src/api/: Selector.tsx  ValuePanel.tsx
plugins.old/src/components/ui/: badge-label.tsx  table.tsx
plugins.old/src/lib/: convert.ts  event.ts  rdb.ts  rpc.ts  utils.ts
plugins/src/: daq_waveforms.tsx  mca_spectrum.tsx  position_control.tsx  temp_control.tsx
plugins/src/api/: Button.tsx  GaugeVertical.tsx  Plot.tsx  Selector.tsx  Spinner.tsx  Switch.tsx  ValueControl.tsx  index.tsx
plugins/src/entry/: jog.tsx  tiltstage.tsxf  wobble.tsx
plugins/src/lib/: websocket.ts
pmc8742/: CMakeLists.txt  main.cpp
runcont/: main.cpp
runcont_lis/: CMakeLists.txt  main.cpp
temperature/: CMakeLists.txt  main.cpp
xpsrld4/: CMakeLists.txt  main.cpp
